@@ -5,6 +5,9 @@ Beta 5
 ======
 
 ** Core ** 
+
+- Added Controller.RedirectToAction(String actionName)
+
 - Moved action collection to ControllerMetaDescriptor class, using new method that does not require ScreenCommonPublicMethods.
 
 - Moved ControllerDescriptorBuilder creation to ProcessEngineFactory to ensure ControllerDescriptors are only created once
